# perceiver-io

./: .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt  sandbox.ipynb  setup.py  tasks.py
.cache/: imdb-tokenizer-10003.json  sentencepiece-wikipedia-ext.json  sentencepiece-wikipedia.json
.github/workflows/: ci_install-pkg.yml  ci_testing.yml  code-format.yml  docker.yml
baseline/: __init__.py
baseline/bert/: mlm.py  model.py  train.md
baseline/gpt2/: clm.py  model.py  train.md
baseline/perceiver/: mlm.py  model.py  train.md
cli/: __init__.py  cli.py  trainer.py
cutmix/: __init__.py  cutmix.py  utils.py
data/: __init__.py  imdb.py  mnist.py  text.py  utils.py
docs/: architecture.md  building-blocks.md  checkpointing.md  dataset-preproc.md  datasets.md  docker-image.md  docker.md  getting-started.md  interface.md  interfaces.md  library-design.md  model-construction.md  pretrained-models.md  tensorboard.md  tokenizer.md  training-examples.md  training-tips.md
docs/models/: image-classifier.md  language-model.md
docs/models/image-classifier/: construction.md  training.md
docs/models/language-model/: construction.md  training.md
examples/: convert.py  inference.ipynb
examples/scaling/clm/: article.ipynb  article.py  train.md  train.py  update.md
examples/scaling/clm/scaling/: flops.py  laws.py
examples/training/: __init__.py  download_checkpoints.sh
examples/training/clm/: prep.sh  train.py  train.sh  train_fsdp.py  train_fsdp.sh
examples/training/img_clf/: train.py  train.sh  valid.sh
examples/training/mlm/: prep.sh  train.py  train.sh
examples/training/sam/giantmidi/: prep.sh  train.py  train.sh
examples/training/sam/maestrov3/: prep.sh  train.py  train.sh
examples/training/txt_clf/: prep.sh  train_all.py  train_all.sh  train_dec.py  train_dec.sh  valid_all.sh  valid_dec.sh
model/: __init__.py  lightning.py  modules.py  utils.py
notebooks/: img-clf.ipynb  inference_examples.ipynb  txt-clf.ipynb
perceiver/: __init__.py  adapter.py  cli.py  lightning.py  model.py  tokenizer.py  utils.py
perceiver/data/: __init__.py  imdb.py  mnist.py  mnist_preproc.py  text.py  utils.py
perceiver/data/audio/: __init__.py  giantmidi_piano.py  maestro_v3.py  midi_processor.py  symbolic.py  utils.py
perceiver/data/image/: __init__.py  cifar100.py  common.py  imagenet.py  mnist.py
perceiver/data/image/cutmix/: cutmix.py
perceiver/data/text/: __init__.py  bookcorpus.py  bookcorpusopen.py  c4.py  collator.py  common.py  enwik8.py  imdb.py  tokenizer.py  utils.py  wikibook.py  wikipedia.py  wikitext.py
perceiver/data/vision/: __init__.py  imagenet.py  mnist.py  optical_flow.py  video_utils.py
perceiver/model/: __init__.py  adapter.py  attention.py  config.py  core.py  factory.py  lightning.py  model.py  tokenizer.py  utils.py
perceiver/model/audio/symbolic/: __init__.py  backend.py  huggingface.py  lightning.py
perceiver/model/core/: __init__.py  adapter.py  classifier.py  config.py  convert.py  huggingface.py  lightning.py  modules.py  position.py  utils.py
perceiver/model/image/: __init__.py  classifier.py  common.py  optical_flow.py
perceiver/model/text/: __init__.py  classifier.py  clm.py  common.py  language.py  mlm.py  utils.py
perceiver/model/text/classifier/: __init__.py  backend.py  huggingface.py  lightning.py
perceiver/model/text/clm/: __init__.py  backend.py  huggingface.py  lightning.py
perceiver/model/text/common/: __init__.py  backend.py  huggingface.py
perceiver/model/text/mlm/: __init__.py  backend.py  huggingface.py  lightning.py  utils.py
perceiver/model/vision/: __init__.py  image_classifier.py  optical_flow.py
perceiver/model/vision/image_classifier/: __init__.py  backend.py  huggingface.py  lightning.py
perceiver/preproc/: image.py  text.py
perceiver/preproc/text/: __init__.py  collator.py  tokenizer.py
perceiver/scripts/: __init__.py  cli.py  img_clf.py  lrs.py  mlm.py  seq_clf.py  trainer.yaml
perceiver/scripts/audio/: __init__.py  preproc.py  symbolic.py
perceiver/scripts/image/: __init__.py  classifier.py
perceiver/scripts/text/: __init__.py  classifier.py  clm.py  clm_fsdp.py  dataset.py  lm.py  mlm.py  preproc.py  tokenizer.py
perceiver/scripts/utils/: dataset.py  scheduler.py  tokenizer.py
perceiver/scripts/vision/: __init__.py  image_classifier.py
perceiverio/: __init__.py  cli.py
perceiverio/cli/: __init__.py  cli.py  trainer.yaml
perceiverio/data/: __init__.py  imdb.py  mnist.py  utils.py
perceiverio/model/: __init__.py  lightning.py  modules.py  utils.py
scripts/: __init__.py  cli.py  img_clf.py  mlm.py  seq_clf.py
tests/: causal_language_model_generate_test.py  causal_language_model_pipeline_test.py  causal_language_model_test.py  conftest.py  image_classifier_conversion_test.py  image_classifier_convert_test.py  image_classifier_mnist_test.py  image_classifier_test.py  kv_cache_test.py  language_model_conversion_test.py  lightning_test.py  mask_filler_test.py  masked_language_model_convert_test.py  masked_language_model_filler_test.py  masked_language_model_test.py  masked_sample_filler_test.py  masked_sample_prediction_test.py  optical_flow_conversion_test.py  optical_flow_pipeline_test.py  optical_flow_test.py  requirements.txt  symbolic_audio_model_generate_test.py  symbolic_audio_model_pipeline_test.py  test_lightning.py  text_classifier_imdb_test.py  text_classifier_test.py  text_data_module_test.py  utils.py
tests/data/: audio_prompt_1.mid
tests/tokenizer/: special_tokens_map.json  tokenizer.json  tokenizer_config.json
tokenizers/: sentencepiece-wikipedia-ext.json  sentencepiece-wikipedia.json
tokenizers/bert-base-uncased-10k-bookcorpus/: special_tokens_map.json  tokenizer.json  tokenizer_config.json
tokenizers/bert-base-uncased-10k-bookcorpus-ext/: tokenizer.json  tokenizer_config.json  vocab.txt
train/: train_img_clf.py  train_mlm.py  train_seq_clf.py  tune_seq_clf.py  utils.py
(+15 files in other folders)
